--- a/components/home/HomeHero.module.css
+++ b/components/home/HomeHero.module.css
@@ -69,18 +69,17 @@
 }
 
 .optionOne .artwork {
-  opacity: .4;
+  opacity: .55;
 }
 
 .optionOne .artwork img {
-  bottom: 0;
-  filter: blur(2px);
-  height: 64%;
-  left: 0;
-  object-fit: cover;
-  object-position: bottom;
-  top: auto;
-  width: 121%;
+  height: auto;
+  left: auto;
+  object-fit: contain;
+  right: -4%;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 58%;
 }
 
 .copy {
@@ -137,9 +136,9 @@
   }
 
   .optionOne .artwork img {
-    height: 56%;
-    left: -10%;
-    width: 130%;
+    height: auto;
+    right: -10%;
+    width: 68%;
   }
 }
 
@@ -176,12 +175,12 @@
   }
 
   .optionOne .artwork {
-    opacity: .3;
+    opacity: .4;
   }
 
   .optionOne .artwork img {
-    height: 46%;
-    left: -20%;
-    width: 150%;
+    height: auto;
+    right: -18%;
+    width: 90%;
   }
 }
